--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "typescript": "^4.6.3"
   },
   "devDependencies": {
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^4.29.3",
     "@typescript-eslint/parser": "^4.29.3",
     "eslint": "^7.32.0",
