--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,39 +1,30 @@
-networks:
-  app-tier:
-    driver: bridge
-    
 services: 
     db:
         image: mysql
         command: --default-authentication-plugin=mysql_native_password
         restart: always
-        expose:
-          - "3306"
         environment: 
-            MYSQL_ROOT_PASSWORD: MYSQL_ALLOW_EMPTY_PASSWORD
+            MYSQL_ROOT_PASSWORD: Edknb67100&* 
             MYSQL_DATABASE: airtime
-            MYSQL_USER: MYSQL_ROOT_PASSWORD
-            MYSQL_PASSWORD: haOuh456+
-        ports:
-          - "3307:3306"    
-        networks:
-          - app-tier      
-    
+        healthcheck:
+            test: ["CMD", "mysqladmin" ,"ping", "-h", "localhost"]
+            timeout: 20s
+            retries: 10
         volumes: 
             - ./init:/docker-entrypoint-initdb.d
     server:
         depends_on:
-          - db
+          db:
+            condition: service_healthy
         build: ./
         restart: unless-stopped
-        env_file: ./.env
         ports:
-          - $NODE_LOCAL_PORT:$PORT
+          - 4000:4000
         environment:
           - DB_HOST=db
-          - DB_USER=$DB_USER
-          - DB_PASSWORD=$DB_PASSWORD
-          - DB_NAME=$DB_NAME
-          - DB_PORT=$DB_DOCKER_PORT
+          - DB_USER=root
+          - DB_PASSWORD=Edknb67100&*
+          - DB_NAME=airtime
+          - DB_PORT=3306
         stdin_open: true
         tty: true
