--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,3 +28,15 @@ services:
           - DB_PORT=3306
         stdin_open: true
         tty: true
+    client:
+      depends_on:
+        - server
+          # server:
+          #   condition: service_healthy
+      build: ../2203-wns-etchebest-airtime-front/
+      ports:
+        - 3000:3000
+      environment:
+        CHOKIDAR_USEPOLLING: "true"
+      volumes:
+        - ../2203-wns-etchebest-airtime-front:/airtime/src
