try to create docker image when pushes

--- a/.sample.env
+++ b/.sample.env
@@ -4,3 +4,6 @@ DB_PORT=ENV_DB_PORT
 DB_USER=ENV_DB_USER
 DB_PASSWORD=ENV_DB_PASSWORD
 DB_NAME=ENV_DB_NAME
+
+DOCKER_NAME=secrets.DOCKERHUB_USERNAME
+DOCKER_TOKEN=secrets.DOCKERHUB_TOKEN
