--- a/.github/workflows/server-docker-build-and-push-ci.yml
+++ b/.github/workflows/server-docker-build-and-push-ci.yml
@@ -1,32 +1,16 @@
-name: ci
+name: ci-bryan
+
 on:
   push:
     branches-ignore:
       - "main"
+
+
 jobs:
-  env:
-    runs-on: ubuntu-latest
-    outputs:
-      env: ${{ steps.import-env.outputs.result }}
-    steps:
-    - uses: actions/checkout@v2
-    - name: Import environment variables from a file
-      id: import-env
-      uses: actions/github-script@v2
-      with:
-        script: |
-          const env = parseEnv(`${process.env.GITHUB_WORKSPACE}/.env`);
-          Object.entries(env).forEach(x => core.exportVariable(...x)); // current job-level env
-          return env;
-    - name: Print environment variable
-      run: echo $ABC
-      env: ${{ fromJson(steps.import-env.outputs.result) }} # step-level env
   docker:
     runs-on: ubuntu-latest
-    needs: [env]
-    env: ${{ fromJson(needs.env.outputs.env) }} # job-level env
     steps:
-      -
+      -   
         name: Check out code
         uses: actions/checkout@v2
       -
@@ -35,16 +19,20 @@ jobs:
       -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
+      - name: Read Poetry Version 🔢
+          run: |
+            echo "DOCKER_USERNAME=$(.env)" >> $GITHUB_ENV
+          shell: bash
       -
         name: Login to DockerHub
         uses: docker/login-action@v2
         with:
-          username: $DOCKER_NAME
-          password: $DOCKER_TOKEN
+          username: ${{ env.DOCKER_USERNAME }}
+          password: ${{secrets.DOCKERHUB_TOKEN_BRYAN}}
       -
         name: Build and push
         uses: docker/build-push-action@v3
         with:
           context: ./
           push: true
-          tags: $DOCKER_NAME/airtime-back:latest
+          tags: ${{secrets.DOCKERHUB_USERNAME_BRYAN}}/airtime-back:latest
