--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,9 +3,10 @@ services:
         image: mysql
         command: --default-authentication-plugin=mysql_native_password
         restart: always
+        env_file: ./.env
         environment: 
-            MYSQL_ROOT_PASSWORD: Edknb67100&* 
-            MYSQL_DATABASE: airtime
+            MYSQL_ROOT_PASSWORD: $DB_PASSWORD 
+            MYSQL_DATABASE: $DB_NAME
         healthcheck:
             test: ["CMD", "mysqladmin" ,"ping", "-h", "localhost"]
             timeout: 20s
@@ -20,6 +21,7 @@ services:
         restart: unless-stopped
         ports:
           - 4000:4000
+        env_file: ./.env
         environment:
           - DB_HOST=db
           - DB_USER=$DB_USER
