--- a/.github/workflows/server-docker-build-and-push-cd-yoann.yml
+++ b/.github/workflows/server-docker-build-and-push-cd-yoann.yml
@@ -1,10 +1,10 @@
 name: CD-yoann
 
 on:
-  push:
-    branches-ignore:
+  pull_request:
+    branches:
       - "main"
-
+      
 jobs:
   docker:
     runs-on: ubuntu-latest
