--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "start": "ts-node src/server.ts",
+    "start": "nodemon src/server.ts",
     "lint": "eslint -c .eslintrc.js tsconfig.json src/**/*.ts"
   },
   "repository": {
@@ -21,12 +21,14 @@
   "homepage": "https://github.com/WildCodeSchool/2203-wns-etchebest-airtime-back#readme",
   "dependencies": {
     "apollo-server": "^3.6.7",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "graphql": "^16.3.0",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
-    "ts-node": "^10.8.1",
-    "ts-node-dev": "^1.1.8",
+    "nodemon": "^2.0.19",
+    "ts-node": "^10.9.1",
     "typescript": "^4.6.3"
   },
   "devDependencies": {
