--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
     "start": "nodemon src/server.ts",
-    "lint": "eslint -c .eslintrc.js tsconfig.json src/**/*.ts"
+    "lint": "eslint -c .eslintrc.js tsconfig.json src/**/*.ts",
+    "project:run": "docker compose -f docker-compose.yml up --build "
   },
   "repository": {
     "type": "git",
@@ -32,6 +33,7 @@
     "typescript": "^4.6.3"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^4.29.3",
     "@typescript-eslint/parser": "^4.29.3",
